<resources>
    <string name="app_name">mUzima</string>
    <string name="confirm_duplicate_form_data_save">Save Duplicate Form Data</string>
    <string name="confirm_patient_id_exists">Does the patient already have existing ID?</string>
    <string name="default_auto_save_interval">2</string>
    <string name="default_form_register">Registration Forms</string>
    <string name="error_action_allow">Action not allowed while sync is in progress</string>
    <string name="error_audio_chose_activity_find">Error: Activity for choosing audio not found</string>
    <string name="error_audio_play_activity_find">Error: Activity for playing audio not found</string>
    <string name="error_audio_record_activity_find">Error: Activity for recording audio not found</string>
    <string name="error_authentication_occur">Authentication error occurred</string>
    <string name="error_authentication_fail">Authentication failed</string>
    <string name="error_client_download">Could not download clients</string>
    <string name="error_cohort_fetch">Something went wrong while fetching cohorts from local repo</string>
    <string name="error_cohort_load">Could not load cohorts</string>
    <string name="error_concept_fetch">Something went wrong while fetching concepts from local repo</string>
    <string name="error_concept_parse">An error occurred while parsing concepts in the form</string>
    <string name="error_connection_data_download">Connection error occurred while downloading data
    </string>
    <string name="error_connection_find">No connection found, please connect your device and try again</string>
    <string name="error_local_repo_data_delete">An error occurred while deleting data from local repo</string>
    <string name="error_data_download">An error occurred while downloading data form server</string>
    <string name="error_data_save">An error occurred while saving data to local repo</string>
    <string name="error_encounter_observation_download">Could not download observations for patients</string>
    <string name="error_encounter_load">Encounters could not be loaded</string>
    <string name="error_exception_data_upload">Exception has been thrown while uploading data</string>
    <string name="error_form_load_fail">Could not load form</string>
    <string name="error_form_save">An error occurred while saving the form</string>
    <string name="error_form_templates_download">Could not download form templates</string>
    <string name="error_form_fetch">Something went wrong while fetching forms from local repo</string>
    <string name="error_form_load">Could not load forms</string>
    <string name="error_patient_data_form_exist">There is existing form data.
        Finish Incomplete data and sync Complete data to Server first before syncing form templates.</string>
    <string name="error_image_capture_activity_find">Error: Activity for capturing an image not found</string>
    <string name="error_image_chose_activity_find">Error: Activity for choosing image not found</string>
    <string name="error_image_view_activity_find">activity_not_found view image</string>
    <string name="error_invalid_username_allow">"Invalid Character in Username. These are not
        allowed: "
    </string>
    <string name="error_invalid_server_URL_return">Invalid Server URL.</string>
    <string name="error_invalid_username_password_combine">Invalid Username, Password, Server combination.
    </string>
    <string name="error_exception_data_load">Load exception has been thrown while loading data</string>
    <string name="error_location_fetch">Something went wrong while fetching locations from local repo</string>
    <string name="error_form_location_load">An error occurred while loading locations for the form</string>
    <string name="error_notification_download">Error downloading notifications</string>
    <string name="error_notification_fetch">Something went wrong while fetching notifications from local repo</string>
    <string name="error_observation_fetch">Something went wrong while fetching observations from local repo</string>
    <string name="error_observation_form_save">An error occurred while saving observations in the form</string>
    <string name="error_observation_load">Observations could not be loaded</string>
    <string name="error_observation_unavailable">No observations Available</string>
    <string name="error_parse_exception_data_fetch">Parse exception has been thrown while fetching data</string>
    <string name="error_patient_encounter_download">Could not download encounters for patients</string>
    <string name="error_patient_fetch">An error occurred while fetching patient</string>
    <string name="error_patient_repo_fetch">Something went wrong while fetching patients from local repo</string>
    <string name="error_form_provider_load">An error occurred while loading provider for the form</string>
    <string name="error_provider_not_set">You do not have provider rights or your provider data is not downloaded, please use add provider option.</string>
    <string name="error_provider_fetch">Something went wrong while fetching providers from local repo</string>
    <string name="error_request_form_fetch">Already fetching forms, ignored the request</string>
    <string name="error_request_form_upload">Already uploading forms, ignored the request</string>
    <string name="error_request_connection_find">No connection found, please connect your device and try again</string>
    <string name="error_request_unallowed_sync">Action not allowed while sync is in progress</string>
    <string name="error_form_patient_data_exist">There is existing form data for selected form(s).
        Finish Incomplete data and sync Complete data to Server first before downloading the forms.</string>
    <string name="error_server_connection_find">Error while connecting to the server. Please connect to the
        internet and try again.
    </string>
    <string name="error_tag_fetch">Something went wrong while fetching tags from local repo</string>
    <string name="error_target_application_find">No target applications</string>
    <string name="error_video_chose_activity_find">Error: Activity for choosing video not found</string>
    <string name="error_video_play_activity_find">Error: Activity for playing video not found</string>
    <string name="error_video_record_activity_find">Error: Activity for recording video not found</string>
    <string name="error_viewPager_adapter_instance_have">ViewPager does not have adapter instance.</string>
    <string name="error_wizard_interrupted">Wizard was interrupted, please logout and run the wizard again.</string>
    <string name="general_accept">Accept</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_client">Clients</string>
    <string name="general_cohort">Cohorts</string>
    <string name="general_delete">Delete</string>
    <string name="general_encounter">Encounters</string>
    <string name="general_form">Forms</string>
    <string name="general_no">No</string>
    <string name="general_notice">Notices</string>
    <string name="general_observation">Observations</string>
    <string name="general_ok">Ok</string>
    <string name="general_thank_you">Thank you!</string>
    <string name="general_welcome">Welcome</string>
    <string name="general_yes">Yes</string>
    <string name="hint_registration_form_select">Please select at least one registration form!</string>
    <string name="hint_audio_caption_enter">Please enter a caption for the audio</string>
    <string name="hint_audio_record">Record or choose audio</string>
    <string name="hint_barcode_scanner_setup">You need a barcode scanner application to register clients from
        mobile. Please check whether it\'s been installed in your device or not.
    </string>
    <string name="hint_client_search">Search Name or ID</string>
    <string name="hint_client_local_search_unmatched">Your search includes client id, given name, middle name and family
        name and searched only in the device
    </string>
    <string name="hint_client_remote_search_unmatched">Your search includes client id, given name, middle name and family
        name and searched only in the device
    </string>
    <string name="hint_cohort_download">Select one or more cohorts from the list and click on \'Next\' to download
    </string>
    <string name="hint_cohort_filter">Start typing to filter the cohorts...</string>
    <string name="hint_cohort_prefix_help">A cohort is a predefined group of clients for which you can fill forms and
        download observations. The prefix(es) set here will be used to download cohorts afterwards.
    </string>
    <string name="hint_cohort_prefix_add">Please click on add button to add a cohort prefix</string>
    <string name="hint_cohort_wizard_help">In this step of the wizard, you download the cohorts you need. Please select the
        cohorts and click next.
    </string>
    <string name="hint_cohort_metadata_download">Please press load to fetch available cohorts list from server</string>
    <string name="hint_cohort_sync">Please select cohorts from all cohorts list and click sync</string>
    <string name="hint_complete_form_unavailable">Complete forms are available only if you have filled a form completely but have
        not synced it with the server
    </string>
    <string name="hint_concept_pref_add">Add concept(s) that you want observation(s) to be downloaded.</string>
    <string name="hint_crash_dialog">An unexpected error occurred forcing mUzima to stop. Please help us fix
        this by sending us error data, all you have to do is click OK.
    </string>
    <string name="hint_crash_dialog_comment_prompt">Please add your comments about the problem below.</string>
    <string name="hint_custom_concept_help">Here you define concepts whose data will be included in later download.</string>
    <string name="hint_custom_location_help">Here you download locations that will show up in the forms.</string>
    <string name="hint_custom_provider_help">Here you download providers that will show up in the forms.</string>
    <string name="hint_drawer_close">Tags drawer close</string>
    <string name="hint_drawer_open">Tags drawer open</string>
    <string name="hint_form_click_download">Select one or more form templates from the list and click on \'Next\' to download</string>
    <string name="hint_form_download">Please select forms from all forms list and click download</string>
    <string name="hint_form_metadata_download">Please press load to fetch data from server</string>
    <string name="hint_form_recommend">Please select non registration forms from all forms list and click download
    </string>
    <string name="hint_image_caption_enter">Please enter a caption for the image</string>
    <string name="hint_incomplete_form_unavailable">Incomplete forms are available only if you have saved a partially filled
        form
    </string>
    <string name="hint_location_pref_add">Add location(s) that you want to download.</string>
    <string name="hint_logo_alt_text">MuzimaLogo</string>
    <string name="hint_notification_view_encounter">View Encounter</string>
    <string name="hint_notification_sync">Make sure you have connectivity to server and press the load button</string>
    <string name="hint_password_change">Did you change your password recently?</string>
    <string name="preference_category_openmrs">OpenMRS Settings</string>
    <string name="preference_password_desc">Enter the OpenMRS password</string>
    <string name="preference_password_title">Password</string>
    <string name="preference_server_desc">Enter the OpenMRS Server</string>
    <string name="preference_server_title">Server</string>
    <string name="preference_username_desc">Enter the OpenMRS username</string>
    <string name="preference_username_title">Username</string>
</resources>